Respond to review comments
Change api 1.0 to v1.

Use Mockmvc's HTTP status matchers.
