# backend/src/main/kotlin/com/tngtech/apicenter/backend/connector/rest/controller/SessionController.kt
@@ -16,7 +16,7 @@ import org.springframework.web.bind.annotation.ResponseStatus
 import org.springframework.web.bind.annotation.RestController
 
 @RestController
-@RequestMapping("/api/1.0/sessions")
+@RequestMapping("/api/v1/sessions")
 class SessionController @Autowired constructor(private val sessionHandler: SessionHandler) {
 
     @Value("\${jwt.secret}")
